lab1/Test/L1-A-12-89.output
Error Type A at Line 7
Error Type A at Line 32
Error Type B at Line 36
