lab1/Test/L1-A-12-89.cmm
float ;
struct {
};
struct XqnPc Eiu , z 

;
@int lj ( struct ccs {
}foKSQ0zFThs ) {
  int ds6XPu1 = B6aUErT_2TZ7Kr || LuLcKlsszFk == VXm1c 
    + GVBmzK7f * - ! Kh ( PzsmNQMIN25orU8bx , adhWB = 
    jpkS59O3 && - T7zb_J4C5MmKIuvOK4Nu [ qMZ8r || YWUHsPXUKPDcdQ 
    && jk3hN6Kv_ZQSKcanP <= QbuOmm8g1easN - - - ( CoE8UYGkPPs8dlS_ 
    > uiwbXdBrO7TWt / yesmGqUPPoYu4v ( yQ , ek3_IL4hjyUAU 
    , qYIDgBU7u_fPJ , Xoa5 >= bfc19bmVFOtIkgTGH5f ) ) 
    != 1079174390 . N4k < wqI9lJV - PyW8qY ( ) . zvAySL4ulyyQqbR 
    ] ) / 1336589450.780303494 , s3mdUFxqMO7 [ 1760081127 
    ] ;
}
int ;
int NCv6WOj ( ) {
  if ( tR2NMF )   Fq7W0OmTOdDWcfH ;
else   if ( pBEgImv_hrTnOssg )   IwYVxiTMftabKJVkh 
    ;


  if ( Mdz9jQNa4K )   if ( BEqDdQ0AsBIe432TpcdQ ) 
    {
  }else   while ( o )   return HbQl0PtIIW ;



}&
int Z0 ( ) {
  gS3UQGkoRN ;
}
int eAchm2 int NK3pAB2 , int W ) {
}
